--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,12 @@
   top: -40px;
   left: 300px;
   width: 50px;
+  height: 20px;
   background-color: #ddd;
+  font-family:monospace;
+  font-size: 17px;
+  font-weight: bold;
+  padding-top: 4px;
 }
 
 .ControlMemo {
@@ -105,6 +110,29 @@
   top: -47px;
   left: 300px;
   width: 100px;
+  height: 20px;
   background-color: #ddd;
+  font-family:monospace;
+  font-size: 17px;
+  font-weight: bold;
+  padding-top: 4px;
 }
 
+.ControlRendering {
+  position: absolute;
+  top: 24px;
+  left: 120px;
+  z-index: 2;
+
+  width: 200px;
+  height: 50px;  
+}
+
+#progress {
+  position: relative;
+  top: 36px;
+  left: 360px;
+  width: 100px;
+  color: #fff;
+  text-align: left;  
+}
