--- a/src/App.css
+++ b/src/App.css
@@ -18,9 +18,10 @@
   top: 135px;
   left: 780px;
   width: 500px;
-  height: 500px;
+  height: 650px;
   background-color: #666;
   padding-top: 30px;
+  border-radius: 5px;
 }
 
 
@@ -31,6 +32,17 @@
   width: 100px;
   height: 35px;
 }
+
+.ControlItemTitle {
+  position: relative;
+  top: 0px;
+  left: 20px;
+  width: 100px;
+  height: 35px;
+  margin-bottom: 20px;
+}
+
+
 
 .ControlLabel {
   position: relative;
@@ -60,6 +72,7 @@
   font-size: 17px;
   font-weight: bold;
   padding-top: 4px;
+  border-radius: 3px;
 }
 
 .ControlMemo {
@@ -116,21 +129,40 @@
   font-size: 17px;
   font-weight: bold;
   padding-top: 4px;
+  border-radius: 3px;
+}
+
+.ControlText {
+  position: relative;
+  top: -28px;
+  left: 170px;
+  width: 215px;
+  height: 20px;
+  background-color: #ddd;
+  font-size: 17px;
+  font-weight: bold;
+  padding-top: 4px;
+  padding-left: 10px;
+  border-radius: 5px;
+}
+
+
+.ControlHR {
+  height: 15px;
 }
 
 .ControlRendering {
   position: absolute;
-  top: 24px;
+  top: 0px;
   left: 120px;
-  z-index: 2;
-
   width: 200px;
-  height: 50px;  
+  height: 50px;
+  border-radius: 5px;
 }
 
 #progress {
   position: relative;
-  top: 36px;
+  top: 15px;
   left: 360px;
   width: 100px;
   color: #fff;
