--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,10 @@
 .App-header {
   background-color: #222;
   height: 50px;
-  padding: 5px 0px 30px 0px;
+  padding: 1px 0px 20px 0px;
   color: white;
-}
-
-.App-intro {
-  font-size: large;
+  font-size: 15px;
+  font-family: serif;
 }
 
 .ControlPanel {
