--- a/src/App.css
+++ b/src/App.css
@@ -4,17 +4,37 @@
 
 .App-header {
   background-color: #222;
-  height: 50px;
-  padding: 1px 0px 20px 0px;
+  padding: 5px 0px 5px 0px;
   color: white;
-  font-size: 15px;
+  font-size: 20px;
   font-family: serif;
 }
 
+#CanvasEditor {
+  position: absolute;
+  top: 60px;
+  left: 10px;
+  width: 700px;
+  height: 200px;
+  margin: 0;
+  padding: 0;
+}
+
+#CanvasRender {
+  position: absolute;
+  top: 300px;
+  left: 10px;
+  width: 500px;
+  height: 500px;
+  margin: 0;
+  padding: 0;
+}
+
+
 .ControlPanel {
   position: absolute;
-  top: 135px;
-  left: 780px;
+  top: 60px;
+  left: 730px;
   width: 500px;
   height: 650px;
   background-color: #666;
