--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,8 @@
   font-family: serif;
 }
 
+.App-header a { color: #ffffff; }
+
 #CanvasEditor {
   position: absolute;
   top: 60px;
@@ -185,4 +187,44 @@
   width: 100px;
   color: #fff;
   text-align: left;  
+}
+
+
+dialog {
+  padding: 0;
+  border: 0;
+  border-radius: 0.4rem;
+  box-shadow: 0 0 1em black;
+  width: 300px;
+  height: 200px;
+  background: #444;
+  color: #EEE;
+  font-size: 10px;
+  font-family: sans-serif;
+}
+
+dialog::backdrop {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.dialogheader {
+  width: 100%;
+  text-align: center;
+  height: 22px;
+  border-radius: 0.4rem 0.4rem 0 0;
+  font-size: 13px;
+  padding-top: 5px;
+  background: #333;
+}
+
+.dialogbody {
+  padding: 20px;
+  font-size: 13px;
+}
+
+.dialogfooter {
+  position: absolute;
+  top: 170px;
+  width: 100%;
+  text-align: center;
 }
